<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_default"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <!-- activity界面 -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/actionbar_shape" >

        <!-- 返回按钮 -->

        <Button
            android:id="@+id/visitorder_dataenter_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_back" />

        <!-- title -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/visitorder_dataenter_back"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dadada" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/select_pricture"
                android:textColor="@color/text_black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/oldimage_priview"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/btn_bg3"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/preview"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp" >

            <com.picselect.view.MyGridView
                android:id="@+id/image_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cacheColorHint="@android:color/transparent"
                android:columnWidth="50dip"
                android:horizontalSpacing="5dip"
                android:listSelector="@android:color/transparent"
                android:numColumns="4"
                android:scrollbars="none"
                android:stretchMode="columnWidth"
                android:verticalSpacing="5dip" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>